--- a/templates/actor/misery-tracker-sheet.hbs
+++ b/templates/actor/misery-tracker-sheet.hbs
@@ -1,4 +1,4 @@
-<form class="{{cssClass}}" autocomplete="off">
+<form class="{{cssClass}} {{data.system.seventhMiseryClass}}" autocomplete="off">
   <div class="title">
       <input
         class="actor-name"
@@ -11,6 +11,9 @@
   </div>      
   <div class="miseries">
     <div class="misery-block {{data.system.misery1.cssClass}}">
+      {{#times 50}}
+        <div class="particle"></div>
+      {{/times}}          
       <input
         type="text"
         name="system.misery1.psalm"
@@ -27,7 +30,7 @@
         class="verse"
         placeholder="#"
         data-dtype="Number"
-      />      
+      />        
     </div>
     <div class="misery-block {{data.system.misery2.cssClass}}">
       <input
@@ -47,6 +50,9 @@
         placeholder="#"
         data-dtype="Number"
       />      
+      {{#times 50}}
+        <div class="particle"></div>
+      {{/times}}      
     </div>
     <div class="misery-block {{data.system.misery3.cssClass}}">
       <input
@@ -66,6 +72,9 @@
         placeholder="#"
         data-dtype="Number"
       />      
+      {{#times 50}}
+        <div class="particle"></div>
+      {{/times}}      
     </div>
     <div class="misery-block {{data.system.misery4.cssClass}}">
       <input
@@ -85,6 +94,9 @@
         placeholder="#"
         data-dtype="Number"
       />      
+      {{#times 50}}
+        <div class="particle"></div>
+      {{/times}}      
     </div>
     <div class="misery-block {{data.system.misery5.cssClass}}">
       <input
@@ -104,12 +116,15 @@
         placeholder="#"
         data-dtype="Number"
       />      
+      {{#times 50}}
+        <div class="particle"></div>
+      {{/times}}      
     </div>
     <div class="misery-block {{data.system.misery6.cssClass}}">
       <input
         type="text"
-        name="misery6.psalm"
-        value="{{system.misery6.psalm}}"
+        name="system.misery6.psalm"
+        value="{{data.system.misery6.psalm}}"
         class="psalm"
         placeholder="#"
         data-dtype="Number"
@@ -117,34 +132,46 @@
       <span class="colon">:</span> 
       <input
         type="text"
-        name="misery6.verse"
-        value="{{system.misery6.verse}}"
+        name="system.misery6.verse"
+        value="{{data.system.misery6.verse}}"
         class="verse"
         placeholder="#"
         data-dtype="Number"
       />      
+      {{#times 50}}
+        <div class="particle"></div>
+      {{/times}}      
     </div>                
     <div class="seven-seven">
       <div class="numbers">7:7</div>
+      {{#times 50}}
+        <div class="particle"></div>
+      {{/times}}      
+    </div>
+  </div>
+
+  {{#if data.system.seventhMiseryClass}}
+    <div class="endtimes">
+      The seventh seal is broken for the seventh and final time.
+      The game and your lives end here. <span class="burn-the-book">Burn the book.</span>
+    </div>
+  {{else}}
+    <div class="agony-block">
+      <div class="agony-title">When will all this agony end?</div>
+      <select name="system.miseryDie">
+        {{#select data.system.miseryDie}}
+          <option value="1d100">Years of pain (d100)</option>
+          <option value="1d20">A bleak half-year (d20)</option>
+          <option value="1d10">A fall in anguish (d10)</option>
+          <option value="1d6">A cruel month (d6)</option>
+          <option value="1d2">The end is nigh! (d2)</option>
+        {{/select}}
+        </select>
     </div>
 
-  </div>
-
-  <div class="agony-block">
-    <div class="agony-title">When will all this agony end?</div>
-    <select name="system.miseryDie">
-      {{#select data.system.miseryDie}}
-        <option value="1d100">Years of pain (d100)</option>
-        <option value="1d20">A bleak half-year (d20)</option>
-        <option value="1d10">A fall in anguish (d10)</option>
-        <option value="1d6">A cruel month (d6)</option>
-        <option value="1d2">The end is nigh! (d2)</option>
-      {{/select}}
-      </select>
-  </div>
-
-  <div class="button-block">
-    <button class="sheet-button misery-button">Roll for Misery</button>
-  </div>
-
+    <div class="button-block">
+      <button class="sheet-button misery-button">Roll for Misery</button>
+    </div>
+  {{/if}}
+  
 </form>
