--- a/templates/actor/misery-tracker-sheet.hbs
+++ b/templates/actor/misery-tracker-sheet.hbs
@@ -1,4 +1,4 @@
-<form class="{{cssClass}} {{data.system.seventhMiseryClass}}" autocomplete="off">
+<form class="{{cssClass}} {{data.system.miseryAnimationClass}} {{data.system.seventhMiseryClass}}" autocomplete="off">
   <div class="title">
       <input
         class="actor-name"
