--- a/scss/morkborg/_foundry-overrides.scss
+++ b/scss/morkborg/_foundry-overrides.scss
@@ -372,12 +372,14 @@ form.editable .results {
 .dialog .dialog-buttons button {
   background: var(--foreground-color);
   color: var(--background-color);
-  font-family: var(--h2-font);
+  font-family: var(--button-font);
+  text-transform: uppercase;
 
   &.default {
     background: var(--foreground-color);
     color: var(--background-color);
-    font-family: var(--h2-font);
+    font-family: var(--button-font);
+    text-transform: uppercase;
   }
 }
 
@@ -432,7 +434,7 @@ select:focus {
 #settings button {
   color: var(--background-color);
   background: var(--foreground-color);
-  font-family: var(--h2-font);
+  font-family: var(--button-font);
 }
 
 #sidebar {
@@ -464,17 +466,17 @@ select:focus {
 .sidebar-tab {
   .action-buttons button {
     background: var(--sidebar-button-background-color);
-    color: var(--sidebar-button-foreground-color);
     border-radius: 0;
-    font-family: var(--h2-font);
+    color: var(--sidebar-button-foreground-color);
+    font-family: var(--button-font);
   }
 
   .directory-header .header-search input {
     background: var(--sidebar-button-background-color);
-    color: var(--sidebar-button-foreground-color);
     border: 1px solid #252525;
     border-radius: 0;
     font-family: var(--h2-font);
+    color: var(--sidebar-button-foreground-color);
 
     &[type="text"]:focus {
       box-shadow: 0 0 5px var(--highlight-background-color);
