CSS and Class Organization
- Updated CSS to make dropdown menus more readable
- Deprecated classUuids in favor of groupedClassUuid that allows adding
  new classes under a group heading.
- Fixed typo on Gutterborn Scum that prevented Stealthy
- Use two columns when selecting allowed classes as well for
  consistency with scvm

--- a/scss/morkborg/_dialog.scss
+++ b/scss/morkborg/_dialog.scss
@@ -99,7 +99,7 @@
     }
   }
 
-  &.scvm-dialog {
+  &.scvm-dialog, &.allowed-scvm-classes-dialog {
     .subtitle {
       text-align: center;
     }
