Fix ammo tracker error from Foundry v12.

--- a/scss/morkborg/_dialog.scss
+++ b/scss/morkborg/_dialog.scss
@@ -99,7 +99,8 @@
     }
   }
 
-  &.scvm-dialog, &.allowed-scvm-classes-dialog {
+  &.scvm-dialog,
+  &.allowed-scvm-classes-dialog {
     .subtitle {
       text-align: center;
     }
