--- a/scss/morkborg/_morkborg.scss
+++ b/scss/morkborg/_morkborg.scss
@@ -58,10 +58,11 @@
   color: var(--foreground-color);
 }
 
-option, optgroup {
-	background: var(--background-color)
+option,
+optgroup {
+  background: var(--background-color);
 }
 
 .application select option {
-	background: var(--background-color)
+  background: var(--background-color);
 }
