--- a/templates/dialog/allowed-scvm-classes-dialog.hbs
+++ b/templates/dialog/allowed-scvm-classes-dialog.hbs
@@ -4,13 +4,8 @@
 >
   <div class="section">
     <div class="subtitle">{{localize "MB.AllowedScvmClassesSelect"}}</div>
-    <hr />
-
-    {{#each classes}}
-    <h3>{{this.groupName}}</h3>
-
-    <ul class="class-list">
-      {{#each this.group as |class|}}
+    <ul>
+      {{#each classes as |class|}}
       <li>
         <label>
           <input name="{{class.uuid}}" type="checkbox" class="class-checkbox"
@@ -20,8 +15,6 @@
       </li>
       {{/each}}
     </ul>
-    {{/each}}
-    <hr />
     <div>
       <a class="toggle-none">{{localize "MB.ScvmfactoryToggleNone"}}</a>&nbsp; /
       &nbsp;<a class="toggle-all">{{localize "MB.ScvmfactoryToggleAll"}}</a>
